# mavo-lesson-and-tirgul

./: .clang-format  .gitignore  Bool.h  CMakeLists.txt  Hash.h  NotesForTheTest.md  main.c  main10.c  main11.c  main12.c  main13.c  main14.c  main15.c  main16.c  main17.c  main18.c  main19.c  main2.c  main20.c  main21.c  main22.c  main23.c  main24.c  main25.c  main26.c  main27.c  main28.c  main29.c  main3.c  main30.c  main31.c  main32.c  main33.c  main34.c  main35.c  main36.c  main37.c  main38.c  main39.c  main4.c  (+9 more)
