cmake_minimum_required(VERSION 3.16)
project(mavo_lesson_and_tirgul C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(mavo_lesson_and_tirgul
        Bool.h
        Hash.h
        main.c
        main10.c
        main11.c
        main12.c
        main13.c
        main14.c
        main15.c
        main16.c
        main17.c
        main18.c
        main19.c
        main2.c
        main20.c
        main21.c
        main22.c
        main3.c
        main4.c
        main5.c
        main6.c
        main7.c
        main8.c
        main9.c)
